--- a/app/views/event_invitation_mailer/invite_student.html.haml
+++ b/app/views/event_invitation_mailer/invite_student.html.haml
@@ -1,7 +1,7 @@
-=render partial: 'shared_mailers/header', locals: { title: "Workshop invitation" }
+=render partial: 'shared_mailers/header', locals: { title: "Event invitation" }
 %body{ bgcolor: "#FFFFFF" }
 
-  =render partial: 'shared_mailers/body_header', locals: { title: "Workshop invitation" }
+  =render partial: 'shared_mailers/body_header', locals: { title: "Event invitation" }
 
   %table{ class: "body-wrap"}
     %tr
@@ -21,15 +21,22 @@
           %table{ bgcolor: "#FFFFFF" }
             %tr
               %td.small{ width: "30%", style: "vertical-align: top; padding-right:10px;"}
+                %h5 When?
+                #{l(@event.date_and_time)} to #{l(@event.ends_at, format: :time) }
+                %br
+                %br
+                %h5 Venue
                 =image_tag(@event.venue.avatar)
-              %td
-                %h4
-                  = @event.name
-                  #{l(@event.date_and_time)} to #{l(@event.ends_at, format: :time) }
                 %p
-                  %b Venue
                   #{@event.venue.name}
-                =link_to "Find out more and RSVP", full_url_for(event_invitation_url(event_id: @event.slug, token: @invitation.token)), class: 'btn'
+              %td{ width: "50%", style: "text-align: center;"}
+                = link_to "Attend", full_url_for(event_invitation_url(event_id: @event.slug, token: @invitation.token)), class: 'btn'
+            %tr
+              %td{ width: "50%", style: "vertical-align: top; padding-right:10px;"}
+                %h5 Sponsors
+                - @event.sponsors.each do |sponsor|
+                  =link_to sponsor.website do
+                    = image_tag sponsor.avatar, style: 'max-width: 100px;'
 
         .content
           = render partial: 'shared_mailers/social'
