restrict sponsor image height in emails

--- a/app/views/event_invitation_mailer/invite_coach.html.haml
+++ b/app/views/event_invitation_mailer/invite_coach.html.haml
@@ -26,7 +26,7 @@
                 %br
                 %h5 Venue
                 =link_to @event.venue.website do
-                  =image_tag(@event.venue.avatar)
+                  =image_tag(@event.venue.avatar), style: 'max-height: 100px'
                 %br
                 %br
               %td{ width: "50%", style: "text-align: center;"}
@@ -36,7 +36,7 @@
                 %h5 Sponsors
                 - @event.sponsors.each do |sponsor|
                   =link_to sponsor.website do
-                    = image_tag sponsor.avatar, style: 'max-width: 100px;'
+                    = image_tag sponsor.avatar, style: 'max-height: 100px;'
 
         .content
           = render partial: 'shared_mailers/social'
