Convert 'Codebar' to 'codebar' as per #237

--- a/app/views/course/invitation/show.html.haml
+++ b/app/views/course/invitation/show.html.haml
@@ -17,7 +17,7 @@
         Hi #{@invitation.member.name},
 
       %p
-        If you are new to Codebar, make sure you read our #{link_to("code of conduct", code_of_conduct_path)} and #{link_to("attendance policy", attendance_policy_path)} before getting your ticket.
+        If you are new to codebar, make sure you read our #{link_to("code of conduct", code_of_conduct_path)} and #{link_to("attendance policy", attendance_policy_path)} before getting your ticket.
 
       %p
         We always make an effort to have vegetarian, vegan and gluten-free food options available. If you have any other dietary requirements #{mail_to @course.chapter.email, "send us an email"}.
