--- a/app/views/job_mailer/job_approved.html.haml
+++ b/app/views/job_mailer/job_approved.html.haml
@@ -20,7 +20,7 @@
                   job you submitted has been approved.
                 %p.callout
                   It is now available to all members at
-                  %a{ href: full_url_for(jobs_url) }Codebar's jobs section &raquo;
+                  %a{ href: full_url_for(jobs_url) }codebar's jobs section &raquo;
 
                 %table.social{ width: "100%" }
                   %tr
