--- a/app/views/jobs/_form.html.haml
+++ b/app/views/jobs/_form.html.haml
@@ -7,7 +7,7 @@
           = f.input :title, label: "Job title", required: true, placeholder: "e.g. Internship"
       .row
         .large-6.columns
-          = f.input :company, required: true, placeholder: "e.g. Codebar", required: true
+          = f.input :company, required: true, placeholder: "e.g. codebar", required: true
       .row
         .large-6.columns
           = f.input :location, required: true, placeholder: "e.g. London or Remote", required: true
