--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -6,7 +6,7 @@
 
       %p.contact
         =t("footer.email_us")
-        =mail_to "hello@codebar.io?Subject=Hello%20Codebar", "hello@codebar.io"
+        =mail_to "hello@codebar.io?Subject=Hello%20codebar", "hello@codebar.io"
 
     .large-3.columns
       %ul.no-bullet
