--- a/app/views/layouts/email.html.erb
+++ b/app/views/layouts/email.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Codebar.io</title>
+    <title>codebar.io</title>
   </head>
   <body style="margin: 0; padding: 0">
     <div style="width: 100%; font-family: 'proxima-nova', 'Helvetica Neue', Helvetica, Arial, sans-serif">
@@ -15,7 +15,7 @@
         <%= yield %>
 
         <div style="color: #111111; font-size: 15px; font-weight: 300; margin-top: 60px;">Despo</div>
-        <div style="color: #111111; font-size: 16px; font-weight: 600; margin-top: 5px;"><a href="http://codebar.io" style="color: #663095; text-decoration: none;">Codebar</a></div>
+        <div style="color: #111111; font-size: 16px; font-weight: 600; margin-top: 5px;"><a href="http://codebar.io" style="color: #663095; text-decoration: none;">codebar</a></div>
 
         <p style="color: #6d6a6a; font-size: 13px; font-weight: 600; margin-top: 90px;">If you dont want to receive these emails <%= link_to "unsubscribe", full_url_for(unsubscribe_url(member_token(@member))), style: "color: #a369d5; text-decoration: underline" %></p>
       </div>
