--- a/app/views/member_mailer/welcome_coach.html.haml
+++ b/app/views/member_mailer/welcome_coach.html.haml
@@ -1,7 +1,7 @@
 %h1 Hi #{@member.name}!
 
 %p
-  Welcome to Codebar. Thanks so much for volunteering - we rely on coaches
+  Welcome to codebar. Thanks so much for volunteering - we rely on coaches
   to make our workshops a success, and it really helps the students who attend.
   We're looking forward to seeing you at one of our events soon.
 
@@ -32,7 +32,7 @@
   or looking for help with their own projects. Don't worry if you're not an expert on
   the topics - your role is not about having all the answers! Guiding a student through
   solving their own problem is more useful in the long run. There are more
-  =link_to "tips for coaching on the Codebar website.", teaching_guide_url
+  =link_to "tips for coaching on the codebar website.", teaching_guide_url
 
 %p
   It's important to us that our workshops are a welcoming &amp; accepting environment
@@ -51,4 +51,4 @@
 %p
   #{"-- "}
   %br
-  The Codebar organisational team
+  The codebar organisational team
