--- a/app/views/member_mailer/welcome_student.html.haml
+++ b/app/views/member_mailer/welcome_student.html.haml
@@ -1,6 +1,6 @@
 %h1 Hi #{@member.name}!
 
-%p Welcome to Codebar. We're looking forward to seeing you at one of our events soon.
+%p Welcome to codebar. We're looking forward to seeing you at one of our events soon.
 
 %p
   - if @member.subscriptions.any?
@@ -14,7 +14,7 @@
 %p
   Our workshops are available to women, LGBTQ people, and others under-represented
   in the tech industry. If you belong to one of these groups, you are more than welcome
-  to attend. You can find out more about Codebar's workshops
+  to attend. You can find out more about codebar's workshops
   = link_to "in our FAQ.", faq_url
 
 %p
@@ -22,7 +22,7 @@
   you to a coach with one to three other students. You can either work through
   = link_to "one of our tutorials", "http://tutorials.codebar.io/"
   or get help with your own project. After 2 hours of coaching, we retire to a nearby
-  pub for some post-Codebar relaxation.
+  pub for some post-codebar relaxation.
 
 %p
   It's important to us that our workshops are a welcoming &amp; accepting environment
@@ -40,4 +40,4 @@
 %p
   #{"-- "}
   %br
-  The Codebar organisational team
+  The codebar organisational team
