--- a/app/views/members/step1.html.haml
+++ b/app/views/members/step1.html.haml
@@ -23,7 +23,7 @@
         - if @member.coach?
           = f.input :about_you, as: :text, label: "What experience do you have? What languages do you like to use? Tell us a little about yourself!", required: true
         - else
-          = f.input :about_you, as: :text, label: "What do you want to work on at Codebar? What have you done in the past? Tell us a little about yourself!", required: true
+          = f.input :about_you, as: :text, label: "What do you want to work on at codebar? What have you done in the past? Tell us a little about yourself!", required: true
 
     .row
       .large-6.large-offset-3.columns.text-right
