--- a/app/views/members/step2.html.haml
+++ b/app/views/members/step2.html.haml
@@ -3,7 +3,7 @@
     .medium-12.columns
       %h1 Pick an invite list
       %p
-        You can register for events on the Codebar site, but it's easier via email.
+        You can register for events on the codebar site, but it's easier via email.
         Join an email list below to receive invites for that location.
 
   - if current_user.coach?
