--- a/app/views/workshops/added.html.haml
+++ b/app/views/workshops/added.html.haml
@@ -3,9 +3,9 @@
   .container
     .row
       .medium-8.columns
-        %h1 You're coming to Codebar!
+        %h1 You're coming to codebar!
         %p
-          Thanks for signing up to this Codebar event! We're looking forward to seeing you.
+          Thanks for signing up to this codebar event! We're looking forward to seeing you.
           Please be sure you've read our #{link_to 'Code of Conduct', code_of_conduct_path} before attending.
 
         - if @coach
@@ -14,7 +14,7 @@
           %p You'll need to bring your laptop with you, but you shouldn't need anything else.
 
         %p
-          We're looking forward to seeing you at Codebar soon!
+          We're looking forward to seeing you at codebar soon!
           = link_to "Drop us an email", "mailto:hello@codebar.io"
           if you have any questions.
         %p
