--- a/app/views/workshops/removed.html.haml
+++ b/app/views/workshops/removed.html.haml
@@ -5,11 +5,11 @@
       .medium-8.columns
         %h1 Sorry to see you go. ☹
         %p
-          We're sad that you can't make it to this Codebar event - but thanks for letting us know!
+          We're sad that you can't make it to this codebar event - but thanks for letting us know!
           By cancelling your attendance, you're letting us give your place to someone else on the waiting list. And that's awesome.
 
         %p
-          Even though you can't make it to this Codebar, we're looking forward to seeing you at another Codebar soon!
+          Even though you can't make it to this codebar, we're looking forward to seeing you at another codebar soon!
           = link_to "Drop us an email", "mailto:hello@codebar.io"
           if you have any questions.
         %p
