--- a/app/views/session_invitation_mailer/change_of_details.html.erb
+++ b/app/views/session_invitation_mailer/change_of_details.html.erb
@@ -4,7 +4,7 @@
 <p style="font-weight: 300; font-size: 16px; color: #2e2e2e; margin-bottom: 50px;">Below you can find the updated session details:</p>
 
 
-<h2 style="color: #2d183d; font-size: 27px; font-weight: 500;letter-spacing: 0.03em; margin-bottom: 0;"><%= @session.title %> by Codebar</h2>
+<h2 style="color: #2d183d; font-size: 27px; font-weight: 500;letter-spacing: 0.03em; margin-bottom: 0;"><%= @session.title %> by codebar</h2>
 <small><%= @session.description %></small>
 <p style="font-size: 16px; font-weight: 300; margin-top: 7px;">on <b style="color: #555555;font-size: 16px; font-weight: 600; margin-top: 0;"><%= l(@session.date_and_time, format: :email)%></b></p>
 
