--- a/app/views/workshops/waitlisted.html.haml
+++ b/app/views/workshops/waitlisted.html.haml
@@ -5,7 +5,7 @@
       .medium-12.columns
         %h1 You're on the waiting list for this event.
         %p
-          You've been added to the waiting list for this Codebar event. We can't guarantee you a place, but we get a lot of cancellations on the day.
+          You've been added to the waiting list for this codebar event. We can't guarantee you a place, but we get a lot of cancellations on the day.
           %strong We strongly recommend you pack everything you need, as we may give you a place on short notice.
 
         %p Please be sure you've read our #{link_to 'Code of Conduct', code_of_conduct_path} before attending.
@@ -16,7 +16,7 @@
           %p As a student, you'll need to bring your laptop with you, but you shouldn't need anything else.
 
         %p
-          We hope to see you at Codebar soon!
+          We hope to see you at codebar soon!
           = link_to "Drop us an email", "mailto:hello@codebar.io"
           if you have any questions.
         %p
