--- a/app/views/admin/members/show.html.haml
+++ b/app/views/admin/members/show.html.haml
@@ -5,6 +5,9 @@
   =link_to "#", class: 'item', "data-reveal-id" => "note-modal" do
     %i.fa.fa-pencil
     %label Note
+  =link_to admin_member_send_eligibility_email_path(@member), class: 'item' do
+    %i.fa.fa-envelope
+    %label Eligibility
 %section
   .stripe.reverse
     .row
@@ -128,4 +131,3 @@
                   = ban.note
 
 = render partial: 'note'
-
