--- a/app/views/admin/members/show.html.haml
+++ b/app/views/admin/members/show.html.haml
@@ -8,6 +8,7 @@
   =link_to admin_member_send_eligibility_email_path(@member), class: 'item' do
     %i.fa.fa-envelope
     %label Eligibility
+
 %section
   .stripe.reverse
     .row
@@ -51,6 +52,11 @@
         %br
         Member since
         %em #{l(@member.created_at, format: :website_format)}
+        - if @member.eligibility_inquiries.present?
+          %p
+          Sent eligibility check email on
+          %em #{l(@member.eligibility_inquiries.last.created_at, format: :website_format)}
+
 
   .stripe.reverse
     .row
