--- a/app/views/admin/members/show.html.haml
+++ b/app/views/admin/members/show.html.haml
@@ -5,9 +5,10 @@
   =link_to "#", class: 'item', "data-reveal-id" => "note-modal" do
     %i.fa.fa-pencil
     %label Note
-  =link_to admin_member_send_eligibility_email_path(@member), class: 'item' do
-    %i.fa.fa-envelope
-    %label Eligibility
+  - unless @member.coach?
+    =link_to admin_member_send_eligibility_email_path(@member), class: 'item' do
+      %i.fa.fa-envelope
+      %label Eligibility
 
 %section
   .stripe.reverse
