--- a/app/views/admin/members/show.html.haml
+++ b/app/views/admin/members/show.html.haml
@@ -9,6 +9,9 @@
     =link_to admin_member_send_eligibility_email_path(@member), class: 'item' do
       %i.fa.fa-envelope
       %label Eligibility
+    =link_to "#", class: 'item' do
+      %i.fa.fa-clock-o
+      %label Attendance
 
 %section
   .stripe.reverse
