--- a/app/views/workshops/_workshop_actions.html.haml
+++ b/app/views/workshops/_workshop_actions.html.haml
@@ -1,6 +1,6 @@
 %p
   - if !@workshop.invitable
-    Not open for registrations.
+    This workshop is not yet open for RSVP.
   - else
     - if @workshop.past?
       - unless logged_in?
