changed sponsors page intro text

--- a/app/views/sponsors/index.html.haml
+++ b/app/views/sponsors/index.html.haml
@@ -2,7 +2,7 @@
   .row
     .large-12.columns
       %p.lead
-        Without our sponsors running <strong>codebar</strong> would have been close to impossible. They provide us with space, food and drinks, internet, help us cover travel expenses for our students and our running costs.
+        Without our sponsors running <strong>codebar</strong> would be impossible. They provide us with space, food and drinks, internet, help us cover travel expenses for our students and our running costs.
       %p.lead
         Thank you for sharing our dream of creating a more welcoming, equal and diverse tech industry.
 
