--- a/app/views/layouts/_aside.html.haml
+++ b/app/views/layouts/_aside.html.haml
@@ -1,30 +1,9 @@
 %aside.left-off-canvas-menu
   %ul.off-canvas-list
-    - if current_user.has_role?(:organiser, :any)
-      %li
-        %label Admin panel
-    - chapters.each do |chapter|
-      - if current_user.has_role?(:organiser, chapter)
-        %li
-          = link_to chapter.name, admin_chapter_path(chapter)
-    - if current_user.has_role?(:organiser) or current_user.is_admin?
-      %li=link_to "Review jobs (#{jobs_pending_approval})", admin_jobs_path
-    %li=link_to "View Feedback", coach_feedback_index_path
     - if current_user.is_admin?
-      %li=link_to "New chapter", new_admin_chapter_path
-      %li=link_to "New group", new_admin_group_path
-      %li=link_to "New event", new_admin_event_path
-      %li= link_to "Admin Dashboard", admin_root_path
-    - if has_permission?
-      %li=link_to "New workshop", new_admin_workshop_path
-      %li=link_to "New sponsor", new_admin_sponsor_path
-
-    - if current_user.is_admin?
-      %li
-        %label Manage organisation
-      %li=link_to "New chapter", new_admin_chapter_path
-      %li=link_to "New group", new_admin_group_path
-
+      = render 'layouts/admin_menu'
+    - elsif current_user.has_role?(:organiser, :any)
+      = render 'layouts/organiser_menu'
     %li
       %label Account
     %li= link_to "Dashboard", dashboard_path
