added static page to document how to manage admin privileges

--- a/app/views/admin/portal/index.html.haml
+++ b/app/views/admin/portal/index.html.haml
@@ -17,6 +17,7 @@
               =humanize_date_with_time(workshop.date_and_time, workshop.time)
     .large-4.columns
       =link_to "View all sponsors", admin_sponsors_path, class: "button expand round"
+      =link_to "Admin Guide", admin_guide_path, class: "button expand round"
     %hr
   .row
     .large-3.columns
