--- a/app/views/admin/sponsors/index.html.haml
+++ b/app/views/admin/sponsors/index.html.haml
@@ -6,6 +6,11 @@
       %hr
       .large-3.columns
         = sponsor.name
+        %p
+          %em
+            Sponsored
+            = sponsor.sponsor_sessions.count
+            sessions
       .large-4.columns
         = AddressDecorator.new(sponsor.address).to_html
       .large-4.columns
