show My Chapters portion on admin menu only if member has organised chapters

--- a/app/views/layouts/_admin_menu.html.haml
+++ b/app/views/layouts/_admin_menu.html.haml
@@ -9,7 +9,8 @@
 %li=link_to "New chapter", new_admin_chapter_path
 %li=link_to "New group", new_admin_group_path
 %li=link_to "Review jobs (#{jobs_pending_approval})", admin_jobs_path
-%li
-  %label My Chapters
-- current_user.organised_chapters.each do |chapter|
-  %li=link_to chapter.name, admin_chapter_path(chapter)
+- if current_user.has_role?(:organiser, :any)
+  %li
+    %label My Chapters
+  - current_user.organised_chapters.each do |chapter|
+    %li=link_to chapter.name, admin_chapter_path(chapter)
