--- a/app/views/admin/sponsors/index.html.haml
+++ b/app/views/admin/sponsors/index.html.haml
@@ -12,7 +12,7 @@
             = sponsor.sponsor_sessions.count
             sessions
       .large-4.columns
-        = AddressDecorator.new(sponsor.address).to_html
+        = AddressDecorator.new(sponsor.address).to_html if sponsor.address
       .large-4.columns
         = image_tag sponsor.avatar, class: 'sponsor'
       .large-1.columns
