--- a/app/views/admin/sponsors/show.html.haml
+++ b/app/views/admin/sponsors/show.html.haml
@@ -6,7 +6,10 @@
   .row
     .large-4.columns
       =image_tag @sponsor.avatar
-    .large-8.columns
+    .large-4.columns
+      %h3 Contacts
+      = SponsorDecorator.new(@sponsor).contact_info
+    .large-4.columns
       %h3 Sponsored
       %ul.no-bullet
         - @sponsor.sessions.each do |workshop|
@@ -15,7 +18,7 @@
               %strong=workshop.chapter.name
               %br
               = humanize_date_with_time(workshop.date_and_time, workshop.time)
-
+    
   .row
     .large-12.columns.text-right
       =link_to "Edit", edit_admin_sponsor_path(@sponsor), class: 'button round'
