fixed code of conduct link

--- a/app/views/member_mailer/welcome_coach.html.haml
+++ b/app/views/member_mailer/welcome_coach.html.haml
@@ -37,7 +37,7 @@
 %p
   It's important to us that our workshops are a welcoming &amp; accepting environment
   for everyone. Please make sure you
-  = link_to "read our code of conduct", attendance_policy_url
+  = link_to "read our code of conduct", code_of_conduct_url
   before attending.
 
 %p
