added instructions to change avatar from user profile view

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1387,3 +1387,10 @@ a {
 .top-bar {
   padding-right: 10px;
 }
+
+.avatar-container {
+  margin-bottom: 1.142rem;
+  span {
+    margin-left: 0.5rem;
+  }
+}
