add fields to form

--- a/app/views/admin/sponsors/_form.html.haml
+++ b/app/views/admin/sponsors/_form.html.haml
@@ -25,6 +25,8 @@
           = a.input :street, label: "Line 2"
           = a.input :postal_code
           = a.input :city
+          = a.input :latitude
+          = a.input :longitude
     .large-6.columns
       .panel
         %strong Contact Details
