--- a/app/views/admin/events/new.html.haml
+++ b/app/views/admin/events/new.html.haml
@@ -66,7 +66,7 @@
                   = f.input :student_questionnaire
               .row
                 .large-12.columns
-                  = f.association :chapters, hint: 'Which chapters do you want to invite to this event? Only one invitation will be emailed out to members with multiple subscriptions.'
+                  = f.association :chapters, hint: 'Which chapters do you want to invite to this event? Only one invitation will be emailed out to members with multiple subscriptions when you click Invite from the event page.'
               .row
                 .large-12.columns
                   %br
