changed all instances of gitter to Slack

--- a/app/views/session_invitation_mailer/invite_student.html.haml
+++ b/app/views/session_invitation_mailer/invite_student.html.haml
@@ -19,7 +19,7 @@
                   In our workshops, you can work through any of our #{link_to "tutorials", "http://codebar.github.io/tutorials" } or get help and guidance on other technologies or your personal projects. We believe that everyone should be entitled to free learning and our community has #{ link_to "a lot of devoted developers", full_url_for(coaches_url)} who help out weekly by coaching.
                 %p You will also get the opportunity to meet other people interested in coding and collaborate with them.
 
-                %p.callout If you are working through the tutorials outside our workshop or need any other help or advice #{ link_to "join the chat on gitter", "https://gitter.im/codebar/tutorials"}.
+                %p.callout If you are working through the tutorials outside our workshop or need any other help or advice #{ link_to "join the codebar Slack", "https://codebar-slack.herokuapp.com"}.
 
 
         .content
