changed participant to student for consistency

--- a/app/views/dashboard/participant_guide.html.haml
+++ b/app/views/dashboard/participant_guide.html.haml
@@ -1,7 +1,7 @@
 .stripe.reverse#banner
   .row
     .large-12.columns
-      %h2 Participant Guide
+      %h2 Student Guide
       %p <a href='#attendance'>Attendance Policy</a> | <a href='#eligibility'>Eligibility Criteria</a>
 
 .stripe.reverse
