removed attend as #{role} button if 0 spaces at event allocated for that role; removed FAQ section unless checkbox is ticked in event create/edit form

--- a/app/views/admin/events/edit.html.haml
+++ b/app/views/admin/events/edit.html.haml
@@ -71,6 +71,9 @@
                 .large-12.columns
                   %br
                   = f.input :invitable, as: :boolean, hint: "Allow members to RSVP"
+              .row
+                .large-12.columns
+                  = f.input :show_faq, as: :boolean, hint: "Display FAQ?"
         .row
           .large-12.columns.text-right
             = f.submit "Save", class: "button"
