--- a/app/views/dashboard/wall_of_fame.html.haml
+++ b/app/views/dashboard/wall_of_fame.html.haml
@@ -19,3 +19,8 @@
                 =link_to twitter_url_for(coach.twitter) do
                   = coach.full_name
                 %p= coach.about_you
+                %p 
+                  skills: 
+                  - coach.skills.each do |skill|
+                    = link_to skill.name, "#", class: "skill"
+                  
