--- a/app/views/dashboard/wall_of_fame.html.haml
+++ b/app/views/dashboard/wall_of_fame.html.haml
@@ -4,23 +4,5 @@
       %h2 Coaches
       %p.lead
         Do you want to help out by coaching at our workshops? Read our #{ link_to "teaching guide", teaching_guide_path } and sign up as a Coach!
-.stripe.reverse
-  .row
-    .large-12.columns
-      %ul.small-block-grid-1.medium-block-grid-2.large-block-grid-3
-        - @coaches.each do |coach|
-          %li.coach
-            .row
-              .small-2.columns
-                =link_to twitter_url_for(coach.twitter) do
-                  =image_tag coach.avatar(96), class: 'th radius', title: coach.full_name
-
-              .small-10.columns
-                =link_to twitter_url_for(coach.twitter) do
-                  = coach.full_name
-                %p= coach.about_you
-                %p 
-                  skills: 
-                  - coach.skills.each do |skill|
-                    = link_to skill.name, "#", class: "skill"
+= render partial: '/coach/coach', locals: { coaches: @coaches }
                   
