--- a/app/views/course/invitation/show.html.haml
+++ b/app/views/course/invitation/show.html.haml
@@ -36,7 +36,7 @@
           %em This session has already taken place!
         - else
           = link_to "Get your ticket", @invitation.course.ticket_url, class: "expand button round center"
-      - if !@next_session.nil? or !@meeting.nil?
+      - if !@next_session.nil?
         %hr
 
   .row
